--- a/quero-falar-com-atendente.html
+++ b/quero-falar-com-atendente.html
@@ -56,12 +56,12 @@
   <iframe id="cookieFrame" src="" style="display:none;"></iframe>
 
   <div id="fallback">
-    Se não for redirecionado, <a href="https://wa.me/553598971383?text=Olá,%20estou%20no%20site%20e%20quero%20comprar%20o%20ArticulaVit.%20Poderia%20me%20ajudar?">clique aqui</a>.
+    Se não for redirecionado, <a href="https://api.whatsapp.com/send?phone=5543991228540&text=Ol%C3%A1%2C%20estou%20no%20site%20e%20quero%20comprar%20o%20ArticulaVit.%20Poderia%20me%20ajudar%3F">clique aqui</a>.
   </div>
 
   <script>
     const cookieURL = "https://entrega.logzz.com.br/pay/memlqopzk/1-frasco-articulavit";
-    const checkoutURL = "https://wa.me/553598971383?text=Olá,%20estou%20no%20site%20e%20quero%20comprar%20o%20ArticulaVit.%20Poderia%20me%20ajudar?";
+    const checkoutURL = "https://api.whatsapp.com/send?phone=5543991228540&text=Ol%C3%A1%2C%20estou%20no%20site%20e%20quero%20comprar%20o%20ArticulaVit.%20Poderia%20me%20ajudar%3F";
 
     const NumeroTLG = '7674575961:AAGSl6HVhZJhymoedLgBMESc9rPF88Q98Es';
     const CanalTLG = '5493027377';
