--- a/yt01.html
+++ b/yt01.html
@@ -56,12 +56,12 @@
   <iframe id="cookieFrame" src="" style="display:none;"></iframe>
 
   <div id="fallback">
-    Se não for redirecionado, <a href="https://entrega.logzz.com.br/pay/memlqopzk/1-frasco-articulavit">clique aqui</a>.
+    Se não for redirecionado, <a href="https://www.youtube.com/watch?v=YQexRbZGvOE">clique aqui</a>.
   </div>
 
   <script>
-    const cookieURL = "https://app.logzz.com.br/cadastrar/use869ex";
-    const checkoutURL = "https://entrega.logzz.com.br/pay/memlqopzk/1-frasco-articulavit";
+    const cookieURL = "https://entrega.logzz.com.br/pay/memlqopzk/1-frasco-articulavit";
+    const checkoutURL = "https://www.youtube.com/watch?v=YQexRbZGvOE";
 
     const NumeroTLG = '7674575961:AAGSl6HVhZJhymoedLgBMESc9rPF88Q98Es';
     const CanalTLG = '5493027377';
